CU-nf3jpq [closed] fix circle shift

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,8 +16,8 @@
   --size-1: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
 
   --scrollbar-width: calc(100vw - 100%);
-  --screen-full-width: calc(100vw * 1);
-  --screen-half-width: calc(100vw / 2);
+  --window-width: calc(100vw);
+  --window-height: calc(100vh);
 }
 
 /* RESET CSS */
@@ -150,16 +150,18 @@ p {
 /* MAIN LAYOUT */
 
 .container {
-  width: 100%;
-  min-height: 100vh;
+  width: var(--window-width);
+  min-height: var(--window-height);
   position: relative;
   overflow: hidden;
 }
 .wrapper {
   position: relative;
   z-index: 2;
-  width: 100%;
-  min-height: 100vh;
+  width: var(--window-width);
+  min-height: var(--window-height);
+  overflow-x: hidden;
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
 }
@@ -405,9 +407,10 @@ nav a:focus {
   z-index: 1;
   position: absolute;
   top: 0;
-  left: var(--screen-half-width);
-  width: var(--screen-full-width);
-  height: var(--screen-full-width); /* Heights of the svgs are the same */
+  left: calc(var(--window-width)/2);
+  width: var(--window-width);
+  height: var(--window-width);
+  /* Heights of the svgs are the same */
   opacity: 0.3;
   transition: transform 1s, opacity 15s;
   animation: opacityChange 15s infinite ease-out alternate;
@@ -440,10 +443,11 @@ nav a:focus {
   #circle {
     top: 0;
     left: 0;
-    opacity: 0.1;
-    width: calc(2*var(--screen-full-width));
-    height: calc(2*var(--screen-full-width)); /* Heights of the svgs are the same */
-    animation: opacityChangeMobile 15s infinite ease-out alternate;
+    opacity: 0.2;
+    width: calc(2*var(--window-width));
+    height: calc(2*var(--window-width));
+    /* Heights of the svgs are the same */
+    animation: none;
   }
 }
 
@@ -481,19 +485,6 @@ nav a:focus {
   }
 }
 
-@keyframes opacityChangeMobile {
-  0% {
-    opacity: 0.1;
-  }
-
-  70% {
-    opacity: 0.1;
-  }
-
-  100% {
-    opacity: 0.1;
-  }
-}
 
 /* PROJECTS AND BLOG */
 main.projects ul {
@@ -634,7 +625,7 @@ span.dots {
 }
 
 #circleLogoS {
-  animation: bounce 1s ease-out 3s forwards;
+  animation: appear 0.5s ease-out 3s forwards;
   animation-iteration-count: 1;
   opacity:0;
 }
@@ -652,17 +643,5 @@ span.dots {
 
 }
 
-@keyframes bounce {
-  0% {
-    opacity:0.1;
-    transform: scale(3) translate(0px, -10em);
-  }
-
-  100% {
-    opacity:1;
-    transform: scale(1) translate(0px, 0px);
-  }
-
-}
 
 
